# Aura-Conformance-Kit

./: PROJECT_MANIFEST.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml
docs/: .placeholder_for_branch  CODING_STANDARD.md  DECISIONS.md  EES_IMPLEMENTATION_MAP.md  GIT_WORKFLOW.md  TESTING_STRATEGY.md  WORKLOG.md
reference/python/: __init__.py  errors.py
reference/python/shared/: __init__.py  requirements.py
tests/: test_bootstrap.py
